<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>jp.chang.myclinic</groupId>
    <artifactId>project</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <inceptionYear>2017</inceptionYear>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>1.9</maven.compiler.target>
        <maven.compiler.source>1.9</maven.compiler.source>
        <jackson.version>2.9.8</jackson.version>
        <spring.boot.version>2.1.0.RELEASE</spring.boot.version>
        <spring.boot.maven.plugin.version>${spring.boot.version}</spring.boot.maven.plugin.version>
        <google.guice.version>4.2.2</google.guice.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.25</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jdk8</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-xml</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>3.3.1</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>8.0.13</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.2.5</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>3.27.2</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>11-ea+19</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>3.9.5</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>master-map</module>
        <module>master-app</module>
        <module>wia</module>
        <module>scanner</module>
        <module>scanner-backup</module>
        <module>reception</module>
        <module>myclinic-util</module>
        <module>server</module>
        <module>dto</module>
        <module>myclinic-consts</module>
        <module>drawer</module>
        <module>pharma</module>
        <module>hotline</module>
        <module>intraclinic</module>
        <module>practice</module>
        <module>reportwaiting</module>
        <module>myclinic-env</module>
        <module>shujii</module>
        <module>master-manip</module>
        <module>kouhatsukasan</module>
        <module>medicalcheck</module>
        <module>client</module>
        <module>archetype-client-javafx</module>
        <module>archetype-lib</module>
        <module>archetype-cli</module>
        <module>record-browser</module>
        <module>utilfx</module>
        <module>rcpt</module>
        <module>rcpt-drawer</module>
        <module>logdto</module>
        <module>master-lib</module>
        <module>tracker</module>
        <module>winutil</module>
        <module>management</module>
        <module>postgresql-dev</module>
        <module>server-postgresql</module>
        <module>dbxfer</module>
        <module>db</module>
        <module>integral-test</module>
        <module>mock-data</module>
        <module>db-mysql</module>
        <module>db-gateway</module>
        <module>api-tool</module>
        <module>backend-mysql</module>
        <module>backend-pgsql</module>
        <module>backend-sqlite</module>
        <module>backend-db</module>
    <module>frontend</module>
    <module>db-copy</module>
    <module>support</module>
  </modules>

</project>